--- a/user-auth/src/main/resources/application.yml
+++ b/user-auth/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
       password: 123456._.Samar
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
