--- a/discovery/src/main/resources/application.yml
+++ b/discovery/src/main/resources/application.yml
@@ -5,7 +5,9 @@ spring:
   application:
     name: discovery-service
   config:
-    import: optional:configserver:http://localhost:8888
+    import:
+      optional:
+        config-server:http://localhost:8888
 
 eureka:
   instance:
