--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -1,1 +1,28 @@
+eureka:
+  client:
+    register-with-eureka: false
 
+server:
+  port: 8222
+spring:
+  application:
+    name: gateway
+  config:
+    import:
+      optional:
+        config-server:http://localhost:8888
+  cloud:
+    gateway:
+      routes:
+        - id: properties
+          uri: http://localhost:8091
+          predicates:
+            - Path=/api/v1/properties/**
+        - id: categories
+          uri: http://localhost:8091
+          predicates:
+            - Path=/api/v1/categories/**
+        - id: users
+          uri: http://localhost:8090
+          predicates:
+            - Path=/api/v1/auth/**
