--- a/loan/src/main/resources/application.yml
+++ b/loan/src/main/resources/application.yml
@@ -6,18 +6,18 @@ eureka:
       defaultzone: http://localhost:8761/eureka
 
 server:
-  port: 8091
+  port: 8092
 
 spring:
   application:
-    name: properties
+    name: loans
   config:
     import:
       optional:
         config-server:http://localhost:8888
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/properties
+    url: jdbc:postgresql://localhost:5432/loans
     hikari:
       username: postgres
       password: 123456._.Samar
