--- a/user-auth/src/main/resources/application.yml
+++ b/user-auth/src/main/resources/application.yml
@@ -3,7 +3,7 @@ eureka:
     hostname: localhost
   client:
     service-url:
-      defaultzone: http://localhost:8761/eureka
+      default-zone: http://localhost:8761/eureka
 
 server:
   port: 8090
@@ -12,7 +12,9 @@ spring:
   application:
     name: users
   config:
-    import: optional:configserver:http://localhost:8888
+    import:
+      optional:
+        config-server:http://localhost:8888
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/users
