--- a/discovery/src/main/resources/application.yml
+++ b/discovery/src/main/resources/application.yml
@@ -1,18 +1,6 @@
-server:
-  port: 8761
 
 spring:
   application:
     name: discovery-service
   config:
-    import:
-      optional:
-        config-server:http://localhost:8888
-
-eureka:
-  instance:
-    hostname: localhost
-
-  client:
-    register-with-eureka: false
-    fetch-registry: false
+    import: optional:configserver:http://localhost:8888
