--- a/user-auth/src/main/resources/application.yml
+++ b/user-auth/src/main/resources/application.yml
@@ -1,29 +1,8 @@
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    service-url:
-      default-zone: http://localhost:8761/eureka
-
-server:
-  port: 8090
 
 spring:
   application:
     name: users
   config:
-    import:
-      optional:
-        config-server:http://localhost:8888
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/users
-    hikari:
-      username: postgres
-      password: 123456._.Samar
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-    database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    import: optional:configserver:http://localhost:8888
+
 
