--- a/config-server/src/main/resources/configurations/loans.yml
+++ b/config-server/src/main/resources/configurations/loans.yml
@@ -14,13 +14,13 @@ spring:
 
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/loans
+    url: ${DB_URL}
     hikari:
-      username: postgres
-      password: 123456._.Samar
+      username: ${DB_USER}
+      password: ${DB_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
