--- a/config-server/src/main/resources/configurations/properties.yml
+++ b/config-server/src/main/resources/configurations/properties.yml
@@ -4,7 +4,6 @@ eureka:
   client:
     service-url:
       defaultzone: http://localhost:8761/eureka
-
 server:
   port: 8091
 
@@ -13,13 +12,13 @@ spring:
     name: properties
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/properties
+    url: ${DB_URL}
     hikari:
-      username: postgres
-      password: 123456._.Samar
+      username: ${DB_USER}
+      password: ${DB_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 application:
