--- a/config-server/src/main/resources/configurations/users.yml
+++ b/config-server/src/main/resources/configurations/users.yml
@@ -13,13 +13,13 @@ spring:
     name: users
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: ${DB_URL}
+    url: jdbc:postgresql://localhost:5432/users
     hikari:
-      username: ${DB_USER}
-      password: ${DB_PASSWORD}
+      username: postgres
+      password: 123456._.Samar
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create-drop
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
